Added with_levels to enchantments